Fully Converted to CMake

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/Debug/ShowdownWrapper",
+            "program": "${workspaceFolder}/build/bin/server",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}/build/bin/",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
