configured imgui to run on player client, and player client now uses imgui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,12 @@ add_subdirectory(PlayerPort)
 
 install(TARGETS server)
 install(TARGETS player_client)
-install(DIRECTORY vendor
-    DESTINATION bin
+install(DIRECTORY vendor/nodejs
+    DESTINATION bin/vendor
+    USE_SOURCE_PERMISSIONS
+)
+install(DIRECTORY vendor/pokemon-showdown
+    DESTINATION bin/vendor
     USE_SOURCE_PERMISSIONS
 )
 install(PROGRAMS Server/run_server
