--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,5 +85,6 @@
         "valarray": "cpp",
         "variant": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/bin/clang++"
+    "C_Cpp.default.compilerPath": "/usr/bin/clang++",
+    "dotnet.defaultSolution": "disable"
 }
